corpus/c/type/case-01/snapshots/gcc15/dual_sink_structured/render.concise.txt
error: [type_mismatch] type or overload mismatch @ src/main.c:5:22
help: compare the expected type and actual argument at the call site
want: int
got : const char *
via : takes_int
| src/main.c:5:22
|     return takes_int(value);
|                      ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output